--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "debug": "DEBUG=server:* nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
@@ -16,12 +16,16 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
     "nocache": "^2.0.0",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
