--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "preinstall": "echo --- preinstall --- && cd server && npm install && cd ../client && npm install && npm run build && cd ..",
+    "preinstall": "echo --- preinstall --- && cd server && npm install && cd client && npm install && npm run build && cd ..",
     "start": "echo --- start --- && cd server && npm start",
-    "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client && npm run start"
+    "devserver": "cd server && npm run dev",
+    "client": "cd client && npm run start",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION-false cd client && npm install && npm run build"
   },
   "engines": {
-    "node": "8.9.4"
+    "node": "10.15.3"
   }
 }
